# multithreading_words_counter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  multi_thread_strategy_threads_with_own_dict.cpp.cpp  multi_thread_strategy_threads_with_shared_dict.cpp
